# linal-mipt

./: .gitignore  CMakeLists.txt  README.md
src/matrix/: Matrix.h  SquareMatrix.h  test.cpp
